Add convert to mono utility, correct formattation in package model, filter, effect and fix error in ListenerController